<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
            android:text="@string/hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textView2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>

    <EditText
            android:id="@+id/msgET"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/hasil"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="@string/pilih_gambar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp" app:srcCompat="@drawable/img_not_available"
            android:id="@+id/stegoIV"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageBtn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/pilih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageBtn" app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginStart="8dp"
            android:drawableLeft="@drawable/ic_image_white"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:id="@+id/linearLayout2" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/stegoIV">
        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/pulihkan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/decryptBtn"
                android:drawableLeft="@drawable/ic_lock_white"
                tools:layout_editor_absoluteX="134dp" tools:layout_editor_absoluteY="503dp"/>
        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/detail"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:id="@+id/detailBtn"
                android:drawableLeft="@drawable/ic_detail_white"
                tools:layout_editor_absoluteY="503dp" tools:layout_editor_absoluteX="259dp"
                android:backgroundTint="@color/colorBlue"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>